Fixed: Remove salt and remove sugar buttons aren't translatable, see #3118
# 1.00.00 (57482) Oct 11, 2011
# 0.00.130 (57448) Oct 11, 2011
Water tab: Fixed: Shouldn't be able to drag in sugar/salt when the sim is paused
Water tab: Fixed: Sim doesn't un-pause on reset all
Micro tab: Fixed: The evaporation slider should be disabled when the sim is paused
# 0.00.129 (57441) Oct 10, 2011
Micro tab: Made periodic table dialog resizable
Micro tab: Disable faucet sliders when sim is paused so the user can't try to add water while the sim is paused
# 0.00.128 (57395) Oct 7, 2011
Water tab: Make it so you can't zoom in and out on the sucrose 3d, but you can still click left to rotate
Water tab: Made symbols for H partial charges about 1/2 the size of the O partial charges
Micro tab: Fixed: The default location of the periodic table window is beyond the left edge of the sim
Disable evaporation slider when water is gone
Added tick marks to the evaporation slider
Removed "Reset all" confirmation dialog
Water tab: Made control panel controls bold
Made "Reset all" button bold
Water tab: Fixed: 'sugar highlight' unchecked is the bright yellow
Macro tab: Constrain the conductivity tester from leaving the play area
# 0.00.127 (57290) Oct 5, 2011
# 0.00.126 (57286) Oct 5, 2011
Water tab: Fixed color for oxygen in JMol view to match the color used in the sucrose in the play area
Prevent shakers from being dragged too far past the left edge of the beaker
Made "Reset all" button non-bold to re-use common code for reset all buttons
Micro tab: Rewrote crystal growth to use boolean flags instead of BondingFailure exception
Micro tab: Made periodic table non-resizable
Water tab: Renamed "sugar atoms" to "sugar highlight"
Made the light rays more visible when in "white background" mode
Rename elements to elementAtomicMasses, to correspond to getter, see #3090
Renamed playButtonPressed field to clockRunning, see #3090